--- a/2.html
+++ b/2.html
@@ -15,16 +15,15 @@
         <div class="bg-white rounded-xl shadow-md p-6 mb-6">
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <!-- 照片：替换为你的照片URL -->
-                <img src="https://picsum.photos/200/200?random=1" alt="个人照片"
-                    class="w-32 h-32 rounded-full object-cover border-4 border-blue-100">
+                <img src="111.jpg" alt="个人照片" class="w-32 h-32 rounded-full object-cover border-4 border-blue-100">
 
                 <div class="text-center md:text-left">
                     <!-- 姓名：替换为你的姓名 -->
-                    <h1 class="text-2xl md:text-3xl font-bold text-gray-800">张明</h1>
+                    <h1 class="text-2xl md:text-3xl font-bold text-gray-800">侯家旺</h1>
                     <!-- 专业：替换为你的专业 -->
-                    <p class="text-blue-600 mb-2">计算机科学与技术 · 大三学生</p>
+                    <p class="text-blue-600 mb-2">计算机专业 大二学生</p>
                     <!-- 简介：替换为你的简介 -->
-                    <p class="text-gray-600">热爱编程，擅长Python和Web开发，有多个项目经验</p>
+                    <p class="text-gray-600">热爱编程，擅长Java开发，喜欢唱歌，打游戏,看小说 </p>
                 </div>
             </div>
         </div>
@@ -35,8 +34,8 @@
                 <i class="fa fa-graduation-cap text-blue-600 mr-2"></i>教育背景
             </h2>
             <!-- 学校信息：替换为你的学校信息 -->
-            <p class="text-gray-700 mb-2"><span class="font-medium">北京大学</span> | 计算机科学与技术 | 2022-2026（预计）</p>
-            <p class="text-gray-600 text-sm">GPA：3.8/4.0 | 专业排名前5%</p>
+            <p class="text-gray-700 mb-2"><span class="font-medium">广东科学技术职业学院</span> | 计算机专业 | </p>
+
         </div>
 
         <!-- 技能特长 -->
@@ -48,26 +47,10 @@
             <div class="flex flex-wrap gap-2">
                 <span class="px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm">Python</span>
                 <span class="px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm">Java</span>
-                <span class="px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm">Web开发</span>
-                <span class="px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm">MySQL</span>
-                <span class="px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm">英语（CET-6）</span>
-            </div>
-        </div>
-
-        <!-- 联系方式 -->
-        <div class="bg-white rounded-xl shadow-md p-6">
-            <h2 class="text-xl font-bold text-gray-800 mb-4 flex items-center">
-                <i class="fa fa-contact-card text-blue-600 mr-2"></i>联系方式
-            </h2>
-            <!-- 联系方式：替换为你的联系方式 -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-2 text-gray-700">
-                <p><i class="fa fa-envelope text-blue-600 mr-2"></i>邮箱：zhangming@example.com</p>
-                <p><i class="fa fa-phone text-blue-600 mr-2"></i>电话：138-xxxx-xxxx</p>
-                <p><i class="fa fa-github text-blue-600 mr-2"></i>GitHub：github.com/zhangming</p>
-                <p><i class="fa fa-weixin text-blue-600 mr-2"></i>微信：zhangming_wechat</p>
+                <span class="px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm">打游戏</span>
+                <span class="px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm">音乐鉴赏</span>
+                <span class="px-3 py-1 bg-blue-50 text-blue-700 rounded-full text-sm">唱歌</span>
             </div>
         </div>
     </div>
-</body>
-
-</html>
+    </div>
