--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="bg-white rounded-xl shadow-md p-6 mb-6">
             <div class="flex flex-col md:flex-row items-center gap-6">
                 <!-- 照片：替换为你的照片URL -->
-                <img src="111.jpg" alt="个人照片" class="w-32 h-32 rounded-full object-cover border-4 border-blue-100">
+                <img src="111.webp" alt="个人照片" class="w-32 h-32 rounded-full object-cover border-4 border-blue-100">
 
                 <div class="text-center md:text-left">
                     <!-- 姓名：替换为你的姓名 -->
@@ -53,4 +53,5 @@
             </div>
         </div>
     </div>
+
     </div>
